# deep-head-pose

./: .gitignore
code/: datasets.py  export_hopenet.py  generate_dataset_file_list.py  hopenet.py  onnx_test.py  test_hopenet.py  test_on_video.py  test_on_video_dlib.py  test_on_video_dlib_v2.py  test_on_video_dockerface.py  test_on_video_huaweiface.py  test_opencv.py  train_hopenet.py  visualize_hopenet_proto.py
code/cpp/head_pose_estimation/: CMakeLists.txt
code/cpp/head_pose_estimation/include/: head_pose_estimation.hpp  head_pose_estimation_api.hpp
code/cpp/head_pose_estimation/include/imagetranslcm/: image_t.hpp
code/cpp/head_pose_estimation/src/: head_pose_estimation.cc  head_pose_estimation_api.cc
code/cpp/head_pose_estimation/test/: test_head_pose_estimation_video.cc
